Add installation script and project name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "mourse-ocr"
+name = "mouse-ocr"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
